fixing cancel oper on propwrap

--- a/src/App.css
+++ b/src/App.css
@@ -159,7 +159,7 @@
 }
 #leftcard {
   width: fixed;
-  height: 100%;
+  /* height: 100%; */
   padding-right: 20px;
   background-color: #FFF;
   border: 1px solid #E8E8EF;
